# govdata-mcp-server

./: .env.example  .gitignore  LICENSE  LICENSE-COMMERCIAL  README.md  download-jars.sh  govdata-model-sample.json  govdata-model.json  log4j.properties  pyproject.toml  requirements.txt  start-server.sh
deploy/: .env.production.template  Dockerfile  README.md  cloud-init.sh  create-production-env.sh  docker-compose.yml  nginx.conf.tpl  quick-deploy.sh
src/govdata_mcp/: __init__.py  auth.py  config.py  jdbc.py  server.py
src/govdata_mcp/tools/: __init__.py  analytics.py  discovery.py  metadata.py  profile.py  query.py  vector.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
