[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "govdata-mcp-server"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Apache Calcite govdata adapter"
authors = [{name = "Kenneth Stott"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later OR Commercial"}
keywords = ["mcp", "calcite", "jdbc", "data", "census", "sec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "JPype1>=1.5.0",
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/kenstott/govdata-mcp-server"
Repository = "https://github.com/kenstott/govdata-mcp-server"

[project.scripts]
govdata-mcp = "govdata_mcp.server:main"

[tool.setuptools]
packages = ["govdata_mcp", "govdata_mcp.tools"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true